--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,7 +36,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/search, roles: ROLE_USER }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/list, roles: ROLE_USER }
 
 when@test:
     security:
